Fixed container and spacing for template migration

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -4,97 +4,110 @@
 
 #migrated-site {
 
+
+
+
   // Stylseheet overrides
   // -----------------------------
 
+
+  &.edit .ecommerce-bar {
+    right: 100px;
+  }
+
+
   // Template wrapper (replace with corresponding template classes)
-  .main.wrapper {
+  .template-content {
     width: 100%;
     max-width: 100%;
     margin: 0;
   }
 
-  // Main content spacing (replace with corresponding template class)
-  .main {
-    padding: 0;
+  .template-content .page {
+    padding-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
   }
 
-  // Widget overflow to allow 10S overlays to display correctly
-  .widget.content {
-    overflow: inherit;
+  .template-footer {
+    padding-top: 0;
   }
+
+
+
 
   // Migration styles
   // -----------------------------
 
   // Replace with corresponding template values
-  @container-width: 960px;
-
-  @spacing__first--desktop: 0px;
-  @spacing__first--tablet:  0px;
-  @spacing__first--mobile:  0px;
-
+  @container-width: 1000px;
   @spacing--other: 30px;
 
+
   // Applies spacing to widgets to mimic container width
+  [data-widget-type="feature"],
+  [data-widget-type="pagetitle"],
+  .theme-blog-header,
   .empty-zone,
   #page-zones__main:empty,
-  #page-zones__main > .widget:not(.row),
-  .row:not(.widget):not(.row--width-no-padding) .row__container {
+  #page-zones__main > .widget:not([data-name="row"]),
+  [data-name="row"]:not(.row--width-no-padding) .row__container {
     margin-left: auto;
     margin-right: auto;
     max-width: @container-width;
+    padding-left: 20px;
+    padding-right: 20px;
     width: 100%;
-  }
 
-  .style--light, .style--dark, .style--accent, .style--background-image {
-    .row__container {
-      width: 90% !important;
+    @media @bp-global-large {
+      padding-left: 20px;
+      padding-right: 20px;
     }
-  }
 
-  // Move spacing to first widget in the main zone (not sections)
-  &.edit #page-zones__main-overlay + .widget:not(.row),
-  #page-zones__main > .widget:not(.row):first-child {
-    margin-top: @spacing__first--desktop;
-
-    @media @tablet {
-      margin-top: @spacing__first--tablet;
+    @media @bp-global-medium {
+      padding-left: 20px;
+      padding-right: 20px;
     }
-    @media @mobile {
-      margin-top: @spacing__first--mobile;
+
+    @media @bp-global-small {
+      padding-left: 20px;
+      padding-right: 20px;
     }
   }
 
   // Move spacing to last widget in the main zone (not sections)
-  #page-zones__main > .widget:not(.row):last-child {
-    margin-bottom: @spacing__first--desktop;
+  #page-zones__main > .widget:not([data-name="row"]):last-child {
+    margin-bottom: 74px;
 
-    @media @tablet {
-      margin-bottom: @spacing__first--tablet;
+    @media @bp-global-large {
+        margin-bottom: 74px;
     }
-    @media @mobile {
-      margin-bottom: @spacing__first--mobile;
+
+    @media @bp-global-medium {
+        margin-bottom: 60px;
+    }
+
+    @media @bp-global-small {
+        margin-bottom: 16px;
     }
   }
 
   // Add spacing to the top of a widget when it follows a section
-  #page-zones__main > .row + .widget:not(.row) {
+  #page-zones__main > [data-name="row"]+ .widget:not([data-name="row"]) {
     margin-top: @spacing--other;
   }
 
   // Remove spacing if widget follows a light section (change to dark if template has a dark BG)
-  #page-zones__main > .row.style--light + .widget:not(.row) {
+  #page-zones__main > .row.style--light + .widget:not([data-name="row"]) {
     margin-top: 0;
   }
 
   // Adds spacing to the section when a widget is before it
-  #page-zones__main > .widget:not(.row) + .row {
-    margin-bottom: @spacing--other;
+  #page-zones__main > .widget:not([data-name="row"]) + [data-name="row"] {
     margin-top: @spacing--other;
 
-    &:not(:last-child) {
-         margin-bottom: 0;
+    &:last-child {
+      margin-bottom: 0;
     }
   }
 
